Adding my notebooks and pdf files produced in lab

--- a/Lab 2/Lab2_Part1A.ipynb
+++ b/Lab 2/Lab2_Part1A.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,15 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "import arcpy\n",
     "import requests\n",
     "import io\n",
-    "import os\n",
-    "\n"
+    "import os\n"
    ]
   },
   {
@@ -34,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,13 +41,15 @@
     "\n",
     "#probably need to reset this when switching from home desktop to laptop\n",
     "#laptop\n",
-    "gdb_folder = r\"C:\\Users\\KOlso\\OneDrive\\Documents\\ArcGIS\\Projects\\GIS5571_Lab2\\GIS5571_Lab2.gdb\"\n",
-    "data_path = r\"C:\\Users\\KOlso\\OneDrive\\Documents\\ArcGIS\\Projects\\GIS5571_Lab2\"\n",
+    "#gdb_folder = r\"C:\\Users\\KOlso\\OneDrive\\Documents\\ArcGIS\\Projects\\GIS5571_Lab2\\GIS5571_Lab2.gdb\"\n",
+    "#data_path = r\"C:\\Users\\KOlso\\OneDrive\\Documents\\ArcGIS\\Projects\\GIS5571_Lab2\"\n",
     "\n",
     "#desktop:\n",
-    "#gdb_path = r\"C:\\Users\\KOlso\\Documents\\ArcGIS\\Projects\\GIS5571_Lab2\\GIS5571_Lab2.gdb\"\n",
-    "#data_path = r\"C:\\Users\\KOlso\\Documents\\ArcGIS\\Projects\\GIS5571_Lab2\"\n",
+    "data_path = r\"C:\\Users\\KOlso\\Documents\\ArcGIS\\Projects\\GIS5571_Lab2\"\n",
+    "gdb_folder = os.path.join(data_path, \"GIS5571_Lab2.gdb\")\n",
+    "\n",
     "las_path = os.path.join(data_path, \"DNR_example.las\")\n",
+    "\n",
     "\n"
    ]
   },
@@ -56,12 +57,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create las file to"
+    "### Create las file request and file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,19 +77,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div class='gpresult'><h2>Messages</h2><div id='messages'>Start Time: Tuesday, October 22, 2024 1:28:41 PM<br>Succeeded at Tuesday, October 22, 2024 1:28:56 PM (Elapsed Time: 14.68 seconds)<br></div><div id = 'default' /></div></div>"
+       "<div class='gpresult'><h2>Messages</h2><div id='messages'>Start Time: Monday, October 28, 2024 11:47:36 PM<br>Succeeded at Monday, October 28, 2024 11:47:40 PM (Elapsed Time: 3.41 seconds)<br></div><div id = 'default' /></div></div>"
       ],
       "text/plain": [
-       "<Result 'C:\\\\Users\\\\KOlso\\\\OneDrive\\\\Documents\\\\ArcGIS\\\\Projects\\\\GIS5571_Lab2\\\\DNR_example_TIN'>"
+       "<Result 'C:\\\\Users\\\\KOlso\\\\Documents\\\\ArcGIS\\\\Projects\\\\GIS5571_Lab2\\\\DNR_example_TIN'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,19 +113,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div class='gpresult'><h2>Messages</h2><div id='messages'>Start Time: Tuesday, October 22, 2024 1:33:25 PM<br>Succeeded at Tuesday, October 22, 2024 1:33:37 PM (Elapsed Time: 11.92 seconds)<br></div><div id = 'default' /></div></div>"
+       "<div class='gpresult'><h2>Messages</h2><div id='messages'>Start Time: Monday, October 28, 2024 11:47:55 PM<br>Succeeded at Monday, October 28, 2024 11:47:59 PM (Elapsed Time: 3.50 seconds)<br></div><div id = 'default' /></div></div>"
       ],
       "text/plain": [
-       "<Result 'C:\\\\Users\\\\KOlso\\\\OneDrive\\\\Documents\\\\ArcGIS\\\\Projects\\\\GIS5571_Lab2\\\\GIS5571_Lab2.gdb\\\\DNR_example_DEM'>"
+       "<Result 'C:\\\\Users\\\\KOlso\\\\Documents\\\\ArcGIS\\\\Projects\\\\GIS5571_Lab2\\\\GIS5571_Lab2.gdb\\\\DNR_example_DEM'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,11 +133,11 @@
    "source": [
     "#Convert las to DEM with las dataset to raster tool - DEM is just a raster showing elevation\n",
     "\n",
-    "DEM_path = os.path.join(gdb_folder, \"DNR_example_DEM\")\n",
+    "dem_path = os.path.join(gdb_folder, \"DNR_example_DEM\")\n",
     "\n",
     "arcpy.conversion.LasDatasetToRaster(\n",
     "    in_las_dataset= las_path,\n",
-    "    out_raster= DEM_path,\n",
+    "    out_raster= dem_path,\n",
     "    value_field=\"ELEVATION\",\n",
     ")"
    ]
@@ -150,16 +151,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\KOlso\\\\OneDrive\\\\Documents\\\\ArcGIS\\\\Projects\\\\GIS5571_Lab2\\\\DEM_export.pdf'"
+       "'C:\\\\Users\\\\KOlso\\\\Documents\\\\ArcGIS\\\\Projects\\\\GIS5571_Lab2\\\\DEM_export.pdf'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,10 +169,10 @@
     "#Set project and working map\n",
     "project = arcpy.mp.ArcGISProject(\"CURRENT\")\n",
     "#desktop version\n",
-    "#part1_map = project.listMaps(\"Map\")[0]\n",
+    "part1_map = project.listMaps(\"Map\")[0]\n",
     "\n",
     "#laptop version\n",
-    "part1_map = project.listMaps(\"Map2\")[0]\n",
+    "#part1_map = project.listMaps(\"Map2\")[0]\n",
     "\n",
     "#prepare layers and layouts for selection\n",
     "tin_layer = part1_map.listLayers(\"DNR_example_TIN\")[0]\n",
