edited doc with additional markdown

--- a/Lab 2/Lab2_Part2.ipynb
+++ b/Lab 2/Lab2_Part2.ipynb
@@ -75,6 +75,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Study area and clip rasters to fit"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 99,
    "metadata": {},
@@ -136,6 +143,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Convert DEM to slope and resample to land cover size"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 104,
    "metadata": {},
@@ -185,12 +199,21 @@
    ],
    "source": [
     "#Next I'm going to resample the dem so it has the same spatial resolution as the land cover raster\n",
+    "\n",
+    "#Normally we might choose to resample to match the lower resolution data, but land cover is discrete and slope is continuous\n",
     "arcpy.management.Resample(\n",
     "    in_raster=\"slope_surface\",\n",
     "    out_raster= os.path.join(gdb_path, \"resample_slope\"),\n",
     "    cell_size=\"15 15\",\n",
     "    resampling_type=\"BILINEAR\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reclassify input data to same scale"
    ]
   },
   {
@@ -221,6 +244,13 @@
     "    out_raster= os.path.join(gdb_path, \"Reclass_lc\"),\n",
     "    missing_values=\"DATA\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apply weights to rasters and create multiple cost surfaces - find least cost path for each"
    ]
   },
   {
