updated with minor changes to prep for network repair work

--- a/Final_Project/Hennepin_Bike_analysis.ipynb
+++ b/Final_Project/Hennepin_Bike_analysis.ipynb
@@ -194,6 +194,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Due to data quality issues, will need to create a new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#create feature dataset\n",
     "\n",
     "arcpy.management.CreateFeatureDataset(\n",
